# cargoal

./: Cargo.toml  README.md
cargoal/: Cargo.toml  Dockerfile  README.md
cargoal-macros/: Cargo.toml
cargoal-macros/src/: lib.rs
cargoal/src/: lib.rs
cargoal/src/db/: config.rs  connection.rs
cargoal/src/renderer/: mod.rs  renderer.rs  rendering.rs
cargoal/src/routes/: mod.rs
cargoal/src/routes/http/: method.rs  mod.rs  request.rs  response.rs
cargoal/src/routes/routing/: group_builder.rs  middleware.rs  mod.rs  route.rs  route_builder.rs  router.rs
cargoal/src/routes/server/: core.rs  mod.rs  server.rs  server_handle.rs
cargoal/tests/: api.rs  db.rs  html_jinja.rs  middleware.rs  regex_dynamic.rs  routes.rs  static.rs
cargoal/tests/templates/: about.html  base.html  conditional.html  corrupt.html  escaping.html  filters.html  home.html  include.html  injection.html  list.html
cargoal/tests/utils/: handlers.rs  middlewares.rs  mod.rs  templates.rs  utils.rs
src/: lib.rs
src/renderer/: renderer.rs
src/routes/: mod.rs
src/routes/http/: method.rs  mod.rs  request.rs  response.rs
src/routes/routing/: groupBuilder.rs  group_builder.rs  middleware.rs  mod.rs  route.rs  route_builder.rs  router.rs
src/routes/server/: server.rs
tests/: api.rs  get_html.rs  middleware.rs  regex_dynamic.rs  routes.rs  server_test.rs  utils.rs
tests/templates/: index.html
tests/utils/: handlers.rs  middlewares.rs  mod.rs  utils.rs
