[package]
name = "cargoal"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "macros", "postgres", "mysql", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
cargoal-macros = { path = "../cargoal-macros" }
minijinja = "2.7.0"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }